Cambio menor en index.html y style.css para el titulo

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="~/style.css">
 	<title>Primera página</title>
 </head>
 <body>
 TEXTO HTML
+<label class="Titulo">Hola</label>
 </body>
 </html>
