Cambio pequeño para el cambio de rama

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 TEXTO HTML
-<label class="Titulo">Hola</label>
+<label class="Titulo">Hola desde la rama-nueva</label>
 </body>
 </html>
