comentario desde rama-2

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="~/style.css">
-	<title>Primera página</title>
+	<title>Primera página con una rama diferente (rama-2)</title>
 </head>
 <body>
 TEXTO HTML
-<label class="Titulo">Hola desde la rama-nueva</label>
+<label class="Titulo">Hola desde la rama-2</label>
 </body>
 </html>
